# adjunct

./: README.md  __main__.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
adjunct/: __init__.py  base.py  data_modules.py  lightning_modules.py
tests/: __init__.py  test_data_modules.py
