[tool.poetry]
name = "adjunct"
version = "0.1.0"
description = "Pytorch Lightning Compatable Feature Sharing"
authors = ["Michael Lowe <lowem1@aetna.com>"]
readme = "README.md"
packages = [{include = "adjunct"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.30.2"
fastapi = "^0.100.0"
datasets = "^2.13.1"
torch = "^2.0.1"
pydantic = "<=1.10.4"
lightning = "^2.0.5"

[tool.poetry.scripts]
test = "tests.test_data_modules:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
